--- a/ticket/auth/package.json
+++ b/ticket/auth/package.json
@@ -18,11 +18,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.16.3",
     "@types/cookie-session": "^2.0.45",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
