--- a/ticket/client/package.json
+++ b/ticket/client/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "eventName": "NEXT_VERSION",
+  "payload": {
+    "version": "9.0.5-canary.2",
+    "isDevelopment": false
+  },
   "dependencies": {
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -18,8 +23,10 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-cookies": "^2.0.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
