--- a/ticket/infra/k8s/client-depl.yaml
+++ b/ticket/infra/k8s/client-depl.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client-depl
+  name: client-react-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: client
+      app: client-react
   template:
     metadata:
       labels:
-        app: client
+        app: client-react
     spec:
       containers:
-        - name: client
-          image: ercanakalar/client
+        - name: client-react
+          image: ercanakalar/client-react
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: client-srv
+  name: client-react-srv
 spec:
   selector:
-    app: client
+    app: client-react
   ports:
-    - name: client
+    - name: client-react
       protocol: TCP
       port: 3000
       targetPort: 3000
