--- a/ticket/infra/k8s/ingrass-srv.yaml
+++ b/ticket/infra/k8s/ingrass-srv.yaml
@@ -11,23 +11,23 @@ spec:
       http:
         paths:
           - path: /api/users/?(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: auth-srv
-                port:
-                  number: 3000
-          - path: /?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: client-react-srv
                 port:
                   number: 3000
           - path: /api/tickets/?(.*)
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: auth-srv
+                name: tickets-srv
+                port:
+                  number: 3000
+          - path: /?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: client-react-srv
                 port:
                   number: 3000
