--- a/ticket/infra/k8s/tickets-depl.yaml
+++ b/ticket/infra/k8s/tickets-depl.yaml
@@ -17,7 +17,7 @@ spec:
           image: ercanakalar/tickets
           env:
             - name: MONGO_URI
-              value: 'mongodb://tickets-mongo-srv:27017/auth'
+              value: 'mongodb://tickets-mongo-srv:27017/tickets'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
